# fitnab

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: docker-publish.yml
migrations/: 20260421000000_init.sql  20260424000000_health_info.sql
src/: fitgirl.rs  main.rs  provider.rs  scrape.rs
